--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+	<head>
+		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  		<title>Estoque Fácil</title>
+		<link rel="stylesheet" type="text/css" href="./login-estoque.css" media="screen" />
+	</head>
+<body>
+    <form class="login-form">
+            <label for="usuario">Usuario</label>
+            <input type="text" id="usuario" class="input" required>
 
+            <label for="senha">Senha</label>
+            <input type="password" id="senha" class="input" requiredßß>
+
+            <button class="button-login" id="buttonLogin" onclick="">Login</button>
+
+    <form>
+    <script src="login-estoque.js"></script>
+  </body>
+</html>
