--- a/src/pages/cadastro-estoque/cadastro-estoque.html
+++ b/src/pages/cadastro-estoque/cadastro-estoque.html
@@ -32,7 +32,7 @@
 
 		</button>
 
-		<a href="login-estoque.html" class="link">Já tem cadastro? Faça login aqui.</a>
+		<a href="/src/pages/login-estoque/login-estoque.html" class="link">Já tem cadastro? Faça login aqui.</a>
 	</form>
 </body>
 </html>
