--- a/src/pages/login-estoque/login-estoque.html
+++ b/src/pages/login-estoque/login-estoque.html
@@ -7,13 +7,17 @@
 	</head>
 <body>
     <form class="login-form">
-            <label for="usuario">Usuario</label>
+            <h1>LOGIN</h1>
+
+            <label for="usuario">USUARIO</label>
             <input type="text" id="usuario" class="input" required>
 
-            <label for="senha">Senha</label>
+            <label for="senha">SENHA</label>
             <input type="password" id="senha" class="input" requiredßß>
 
-            <button class="button-login" id="buttonLogin" onclick="">Login</button>
+            <p>Não possui login?<a href="/src/pages/cadastro-estoque/cadastro-estoque.html"> Cadastre-se!</a></p>
+
+            <button class="button-login" id="buttonLogin" onclick="">ENTRAR</button>
 
     <form>
     <script src="login-estoque.js"></script>
