Cadastro - Atualização Template do Site

--- a/src/pages/cadastro-estoque/cadastro-estoque.html
+++ b/src/pages/cadastro-estoque/cadastro-estoque.html
@@ -14,8 +14,9 @@
 		<meta name="theme-color" content="#ffffff">
 	</head>
 <body>
-	<h1>Estoque Fácil</h1>
+	<h1>ESTOQUE FÁCIL</h1>
 	<form class="login-form">
+
 		<label id="labelNome" for="nome">Nome:</label>
 		<input class="input" type="text" id="nome" name="nome" required>
 
@@ -28,9 +29,9 @@
 		<label id="labelConfirmarSenha" for="ConfirmarSenha">Confirme a senha:</label>
 		<input class="input"type="password" id="ConfirmarSenha" name="ConfirmarSenha" required>
 
-		<button class="button-cadastrar" onclick="cadastrar()">Cadastrar</button>
-
 		<a href="/src/pages/login-estoque/login-estoque.html" class="link">Já tem cadastro? Faça login aqui.</a>
+
+		<button class="button-cadastrar" onclick="cadastrar()">CADASTRAR</button>
 	</form>
 	<script src="cadastro-estoque.js"></script>
 </body>
