--- a/src/pages/cadastro-estoque/cadastro-estoque.html
+++ b/src/pages/cadastro-estoque/cadastro-estoque.html
@@ -14,7 +14,7 @@
 		<meta name="theme-color" content="#ffffff">
 	</head>
 <body>
-	<h1 class="nomeSite">CADASTRE-SE</h1>
+	<h1 class="nomeSite">ESTOQUE FÁCIL</h1>
 	<form class="login-form">
 
 		<label id="labelNome" for="nome">Nome:</label>
