Atualiza caminho dos links

--- a/src/pages/login-estoque/login-estoque.html
+++ b/src/pages/login-estoque/login-estoque.html
@@ -15,7 +15,7 @@
             <label for="senha">SENHA</label>
             <input type="password" id="senha" class="input" requiredßß>
 
-            <p>Não possui login?<a href="/src/pages/cadastro-estoque/cadastro-estoque.html"> Cadastre-se!</a></p>
+            <p>Não possui login?<a href="../cadastro-estoque/cadastro-estoque.html">Cadastre-se!</a></p>
 
             <button class="button-login" id="buttonLogin" onclick="">ENTRAR</button>
 
