--- a/src/pages/cadastro-estoque/cadastro-estoque.html
+++ b/src/pages/cadastro-estoque/cadastro-estoque.html
@@ -14,7 +14,7 @@
 		<meta name="theme-color" content="#ffffff">
 	</head>
 <body>
-	<h1 class="nomeSite">CADASTRE-SE</h1>
+	<h1 class="nomeSite">ESTOQUE FÁCIL</h1>
 	<form class="login-form">
 
 		<label id="labelNome" for="nome">Nome:</label>
@@ -29,7 +29,7 @@
 		<label id="labelConfirmarSenha" for="ConfirmarSenha">Confirme a senha:</label>
 		<input class="input"type="password" id="ConfirmarSenha" name="ConfirmarSenha" required>
 
-		<a href="/src/pages/login-estoque/login-estoque.html" class="link">Já tem cadastro? Faça login aqui.</a>
+		<a href="../login-estoque/login-estoque.html" class="link">Já tem cadastro? Faça login aqui.</a>
 
 		<button class="button-cadastrar" onclick="cadastrar()">CADASTRAR</button>
 	</form>
