feature(cadastro): inclui página para registro de entradas e saídas - estoque

--- a/src/pages/cadastro-estoque/cadastro-estoque.html
+++ b/src/pages/cadastro-estoque/cadastro-estoque.html
@@ -21,7 +21,7 @@
 		<input class="input" type="text" id="nome" name="nome" required>
 
 		<label id="labelUsuario" for="usuario">Usuario:</label>
-		<input class="input" type="text" id="usuario" name="sobrenome" required>
+		<input class="input" type="text" id="usuario" name="usuario" required>
 
 		<label id="labelSenha" for="senha">Senha:</label>
 		<input class="input"type="password" id="senha" name="senha" required>
