--- a/src/pages/login-estoque/login-estoque.html
+++ b/src/pages/login-estoque/login-estoque.html
@@ -9,15 +9,15 @@
     <form class="login-form">
             <h1>LOGIN</h1>
 
-            <label for="usuario">USUARIO</label>
+            <label id="usuarioLabel" for="usuario">USUARIO</label>
             <input type="text" id="usuario" class="input" required>
 
-            <label for="senha">SENHA</label>
-            <input type="password" id="senha" class="input" requiredßß>
+            <label id="senhaLabel" for="senha">SENHA</label>
+            <input type="password" id="senha" class="input" required>
 
             <p>Não possui login?<a href="../cadastro-estoque/cadastro-estoque.html">Cadastre-se!</a></p>
 
-            <button class="button-login" id="buttonLogin" onclick="">ENTRAR</button>
+            <button class="button-login" id="buttonLogin" onclick="entrar()">ENTRAR</button>
 
     <form>
     <script src="login-estoque.js"></script>
