feature(cadastro): inclui funcionalidades de registro de compra e venda

--- a/src/pages/login-estoque/login-estoque.html
+++ b/src/pages/login-estoque/login-estoque.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="./login-estoque.css" media="screen" />
 	</head>
 <body>
-    <form class="login-form">
+    <div class="login-form">
             <h1>LOGIN</h1>
 
             <label id="usuarioLabel" for="usuario">USUARIO</label>
@@ -19,7 +19,7 @@
 
             <button class="button-login" id="buttonLogin" onclick="entrar()">ENTRAR</button>
 
-    <form>
+    <div>
     <script src="login-estoque.js"></script>
   </body>
 </html>
