--- a/src/pages/entradaProdutos-estoque/entrada-produtos.html
+++ b/src/pages/entradaProdutos-estoque/entrada-produtos.html
@@ -19,14 +19,12 @@
         </div>
         <div class="form-content">
 
-            <label id="labelProduto" for="nomeProduto">Nome do produto</label>
-            <input class="input" type="text" id="nomeProduto" name="nomeProduto" required>
+            <label id="labelProduto" for="nomeProduto">Nome e numeração do produto</label>
+            <select id="nomnumProduto"></select>
 
             <label id="labelQuantidade" for="quantidade">Quantidade</label>
             <input class="input" type="text" id="quantidade" name="quantidade" required>
 
-            <label id="labelNumeracao" for="numeracao">Numeração</label>
-            <input class="input" type="text" id="numeracao" name="numeracao" required>
 
             <label id="labelCompra" for="precoCompra">Preço de compra</label>
             <input class="input" type="text" id="precoCompra" name="precoCompra" required>
