feature(cadastro): Faz correção de aspectos funcionais

--- a/src/pages/cadastro-estoque/cadastro-estoque.html
+++ b/src/pages/cadastro-estoque/cadastro-estoque.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-  		<title>Estoque Fácil</title>
+  		<title>Estoque Fácil - Cadastro</title>
 		<link rel="stylesheet" type="text/css" href="./cadastro-estoque.css" media="screen" />
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
