--- a/src/pages/cadastroProdutos-estoque/cadastroProdutos.html
+++ b/src/pages/cadastroProdutos-estoque/cadastroProdutos.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="utf-8">
+    <title>Estoque Fácil - Cadastro de Produtos</title>
     <meta name="author" content="Samara Almeida">
     <meta name="description" content="Cadastro de Novos Produtos - Estoque">
     <meta name="keywords" content="Estoque, Gerenciamento, Produtos">
