--- a/src/pages/login-estoque/login-estoque.html
+++ b/src/pages/login-estoque/login-estoque.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-  		<title>Estoque Fácil</title>
+  		<title>Estoque Fácil - Login</title>
 		<link rel="stylesheet" type="text/css" href="./login-estoque.css" media="screen" />
 	</head>
 <body>
