feature(login-cadastro): Atualiza visual

--- a/src/pages/login-estoque/login-estoque.html
+++ b/src/pages/login-estoque/login-estoque.html
@@ -1,24 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-  		<title>Estoque Fácil - Login</title>
-		<link rel="stylesheet" type="text/css" href="./login-estoque.css" media="screen" />
-	</head>
+
+<head>
+  <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+  <title>Estoque Fácil - Login</title>
+  <link rel="stylesheet" type="text/css" href="./login-estoque.css" media="screen" />
+</head>
+
 <body>
-    <div class="login-form">
-            <h1>LOGIN</h1>
+  <div class="login-form">
 
-            <label id="usuarioLabel" for="usuario">USUARIO</label>
-            <input type="text" id="usuario" class="input" required>
+    <div class="flex">
+      <h1>Faça seu login!</h1>
 
-            <label id="senhaLabel" for="senha">SENHA</label>
-            <input type="password" id="senha" class="input" required>
+      <div class="logo">
+        <img src="./Imagens/logo_transparent.png">
+      </div>
+    </div>
 
-            <p>Não possui login?<a href="../cadastro-estoque/cadastro-estoque.html">Cadastre-se!</a></p>
+      <label id="usuarioLabel" for="usuario">Usuário</label>
+      <input type="text" id="usuario" class="input" required>
 
-            <button class="button-login" id="buttonLogin" onclick="entrar()">ENTRAR</button>
+      <label id="senhaLabel" for="senha">Senha</label>
+      <input type="password" id="senha" class="input" required>
+
+      <a class="link" href="../cadastro-estoque/cadastro-estoque.html">Não possui login? Cadastre-se.</a>
+
+      <button class="button-login" id="buttonLogin" onclick="entrar()">ENTRAR</button>
     </div>
     <script src="login-estoque.js"></script>
-  </body>
+</body>
+
 </html>
