--- a/src/pages/cadastro-estoque/cadastro-estoque.html
+++ b/src/pages/cadastro-estoque/cadastro-estoque.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-	<head>
-		<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
-  		<title>Estoque Fácil - Cadastro</title>
-		<link rel="stylesheet" type="text/css" href="./cadastro-estoque.css" media="screen" />
 
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-		<link rel="manifest" href="/site.webmanifest">
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-		<meta name="msapplication-TileColor" content="#da532c">
-		<meta name="theme-color" content="#ffffff">
-	</head>
+<head>
+	<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+	<title>Estoque Fácil - Cadastro</title>
+	<link rel="stylesheet" type="text/css" href="./cadastro-estoque.css" media="screen" />
+
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+	<link rel="manifest" href="/site.webmanifest">
+	<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+</head>
+
 <body>
-	<h1 class="nomeSite">ESTOQUE FÁCIL</h1>
 	<form class="login-form">
+		<div class="flex">
+			<h1>Cadastre-se!</h1>
 
-		<label id="labelNome" for="nome">Nome:</label>
+			<div class="logo">
+				<img src="./Imagens/logo_transparent.png">
+			</div>
+		</div>
+
+		<label id="labelNome" for="nome">Nome</label>
 		<input class="input" type="text" id="nome" name="nome" required>
 
-		<label id="labelUsuario" for="usuario">Usuario:</label>
+		<label id="labelUsuario" for="usuario">Usuário</label>
 		<input class="input" type="text" id="usuario" name="usuario" required>
 
-		<label id="labelSenha" for="senha">Senha:</label>
-		<input class="input"type="password" id="senha" name="senha" required>
+		<label id="labelSenha" for="senha">Senha</label>
+		<input class="input" type="password" id="senha" name="senha" required>
 
-		<label id="labelConfirmarSenha" for="ConfirmarSenha">Confirme a senha:</label>
-		<input class="input"type="password" id="ConfirmarSenha" name="ConfirmarSenha" required>
+		<label id="labelConfirmarSenha" for="ConfirmarSenha">Confirme a senha</label>
+		<input class="input" type="password" id="ConfirmarSenha" name="ConfirmarSenha" required>
 
 		<a href="../login-estoque/login-estoque.html" class="link">Já tem cadastro? Faça login aqui.</a>
 
@@ -35,4 +43,5 @@
 	</form>
 	<script src="cadastro-estoque.js"></script>
 </body>
+
 </html>
