--- a/src/pages/dashboard-estoque/dashboard-estoque.html
+++ b/src/pages/dashboard-estoque/dashboard-estoque.html
@@ -1,36 +1,16 @@
 <!DOCTYPE html>
+
 <html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Estoque Fácil - Dashboard</title>
-    <link rel="stylesheet" type="text/css" href="./dashboard-estoque.css" media="screen" />
+    <meta name="author" content="Samara Almeida">
+    <meta name="description" content="Registro de entradas e saídas - Estoque">
+    <meta name="keywords" content="Estoque, Gerenciamento, Produtos">
+
+    <link rel="stylesheet" type="text/css" href="./entradas&saidas.css">
 </head>
 
 <body>
-    <div class="title">
-        <h1>Dashboard</h1>
-    </div>
-
-    <div class="card-container">
-        <div class="card">
-            <h2>Produtos comprados</h2>
-            <p>250</p>
-        </div>
-        <div class="card">
-            <h2>Valor em produtos comprados</h2>
-            <p>R$ 10.000</p>
-        </div>
-        <div class="card">
-            <h2>Produtos vendidos</h2>
-            <p>150</p>
-        </div>
-        <div class="card">
-            <h2>Valor em produtos vendidos</h2>
-            <p>R$ 7.500</p>
-        </div>
-    </div>
+    <h1>Página em construção!</h1>
 </body>
-
-</html>
