--- a/src/pages/dashboard-estoque/dashboard-estoque.html
+++ b/src/pages/dashboard-estoque/dashboard-estoque.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="author" content="Samara Almeida">
+    <meta name="author" content="Bianca Matos">
     <meta name="description" content="Registro de entradas e saídas - Estoque">
     <meta name="keywords" content="Estoque, Gerenciamento, Produtos">
 
