feature(cadastro): Adiciona recurso de navegação.

--- a/src/pages/saidaProdutos-estoque/saida-produtos.html
+++ b/src/pages/saidaProdutos-estoque/saida-produtos.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-    <a class="pagina-inicial" href="../dashboard-estoque/dashboard-estoque.html">Página Inicial</a>
+    <div class="nav">
+        <a class="pagina-inicial" href="../dashboard-estoque/dashboard-estoque.html">Página Inicial</a>
+        <a class="cadastro-produtos" href="../cadastroProdutos-estoque/cadastroProdutos.html">Cadastro de Produtos</a>
+        <a class="entrada-produtos" href="../entradaProdutos-estoque/entrada-produtos.html">Compra de Produtos</a>
+    </div>
     <div class="form-body">
         <div class="form-title">
             <h1>Registro de Venda de Produtos</h1>
