--- a/src/pages/dashboard-estoque/dashboard-estoque.html
+++ b/src/pages/dashboard-estoque/dashboard-estoque.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
+-
 <html lang="pt-br">
 
 <head>
     <meta charset="utf-8">
+    <meta name="author" content="Bianca Matos">
+    <meta name="description" content="Dashboard - Estoque">
+    <meta name="keywords" content="Estoque, Gerenciamento, Produtos">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Estoque Fácil - Dashboard</title>
     <img id="logo" src= "https://github.com/ICEI-PUC-Minas-PMV-ADS/pmv-ads-2023-1-e1-proj-web-t06-projetocontroleestoque/blob/main/src/pages/login-estoque/Imagens/logo_transparent.png">
+    <link rel="stylesheet" type="text/css" href="./dashboard.css">
 
 
 </head>
