--- a/src/pages/dashboard-estoque/dashboard-estoque.html
+++ b/src/pages/dashboard-estoque/dashboard-estoque.html
@@ -57,6 +57,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://github.com/chartjs/Chart.js/blob/master/docs/scripts/utils.js"></script>
+<script src="./dashboard-estoque.js"></script>
 
 </body>
 
