--- a/src/pages/dashboard-estoque/dashboard-estoque.html
+++ b/src/pages/dashboard-estoque/dashboard-estoque.html
@@ -9,7 +9,6 @@
     <meta name="keywords" content="Estoque, Gerenciamento, Produtos">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Estoque Fácil - Dashboard</title>
-    <img id="logo" src= "https://github.com/ICEI-PUC-Minas-PMV-ADS/pmv-ads-2023-1-e1-proj-web-t06-projetocontroleestoque/blob/main/src/pages/login-estoque/Imagens/logo_transparent.png">
     <link rel="stylesheet" type="text/css" href="./dashboard-estoque.css">
 
 
@@ -18,6 +17,10 @@
 <body>
     <div class="title">
         <h1>Dashboard</h1>
+    </div>
+
+    </div>
+    <img src=".pages/login-estoque/Imagens/logo_transparent.png">
     </div>
 
     <div class="card-container">
