--- a/src/pages/dashboard-estoque/dashboard-estoque.html
+++ b/src/pages/dashboard-estoque/dashboard-estoque.html
@@ -20,7 +20,7 @@
     </div>
 
     </div>
-    <img id="logo" src="./login-estoque/Imagens/logo_transparent.png">
+    <img id="logo" src="src/pages/login-estoque/Imagens/logo_transparent.png">
     </div>
 
     <div class="card-container">
