--- a/src/pages/dashboard-estoque/dashboard-estoque.html
+++ b/src/pages/dashboard-estoque/dashboard-estoque.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Estoque, Gerenciamento, Produtos">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Estoque Fácil - Dashboard</title>
-    <link rel="stylesheet" type="text/css" href="./dashboard-estoque.css">
+    <link rel="stylesheet" type="text/css" href="./dashboard.css">
 
 
 </head>
@@ -17,10 +17,6 @@
 <body>
     <div class="title">
         <h1>Dashboard</h1>
-    </div>
-
-    </div>
-    <img id="logo" src="src/pages/login-estoque/Imagens/logo_transparent.png">
     </div>
 
     <div class="card-container">
@@ -60,7 +56,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://github.com/chartjs/Chart.js/blob/master/docs/scripts/utils.js"></script>
-<script src="./dashboard-estoque.js"></script>
 
 </body>
 
