--- a/src/pages/dashboard-estoque/dashboard-estoque.html
+++ b/src/pages/dashboard-estoque/dashboard-estoque.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="Estoque, Gerenciamento, Produtos">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Estoque Fácil - Dashboard</title>
-    <link rel="stylesheet" type="text/css" href="./dashboard.css">
+    <link rel="stylesheet" type="text/css" href="./dashboard-estoque.css">
 
 
 </head>
@@ -56,6 +56,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://github.com/chartjs/Chart.js/blob/master/docs/scripts/utils.js"></script>
+<script src="dashboard-estoque.js"></script>
 
 </body>
 
