--- a/src/pages/dashboard-estoque/dashboard-estoque.html
+++ b/src/pages/dashboard-estoque/dashboard-estoque.html
@@ -22,19 +22,19 @@
     <div class="card-container">
         <div class="card">
             <h2>Produtos comprados</h2>
-            <p>250</p>
+            <p id="card_qnt_prod_comprados"> </p>
         </div>
         <div class="card">
             <h2>Valor em produtos comprados</h2>
-            <p>R$ 10.000</p>
+            <p id="card_valor_prod_comprados"> </p>
         </div>
         <div class="card">
             <h2>Produtos vendidos</h2>
-            <p>150</p>
+            <p id="card_qnt_prod_vendidos"> </p>
         </div>
         <div class="card">
             <h2>Valor em produtos vendidos</h2>
-            <p>R$ 7.500</p>
+            <p id="card_valor_prod_vendidos"> </p>
         </div>
     </div>
 
