--- a/src/pages/dashboard-estoque/dashboard-estoque.html
+++ b/src/pages/dashboard-estoque/dashboard-estoque.html
@@ -15,50 +15,62 @@
 </head>
 
 <body>
-    <div class="title">
-        <h1>Dashboard</h1>
-    </div>
-
-    <div class="card-container">
-        <div class="card">
-            <h2>Produtos comprados</h2>
-            <p id="card_qnt_prod_comprados"> </p>
+    <header>
+        <div class="title">
+            <h1>DASHBOARD</h1>
         </div>
-        <div class="card">
-            <h2>Valor em produtos comprados</h2>
-            <p id="card_valor_prod_comprados"> </p>
+
+        <div class="card-container">
+            <div class="card">
+                <h2>Produtos comprados</h2>
+                <p id="card_qnt_prod_comprados"> </p>
+            </div>
+            <div class="card">
+                <h2>Valor em produtos comprados</h2>
+                <p id="card_valor_prod_comprados"> </p>
+            </div>
+            <div class="card">
+                <h2>Produtos vendidos</h2>
+                <p id="card_qnt_prod_vendidos"> </p>
+            </div>
+            <div class="card">
+                <h2>Valor em produtos vendidos</h2>
+                <p id="card_valor_prod_vendidos"> </p>
+            </div>
         </div>
-        <div class="card">
-            <h2>Produtos vendidos</h2>
-            <p id="card_qnt_prod_vendidos"> </p>
+    </header>
+
+    <nav>
+        <div class="logo">
+            <img src="./Imagens/logo_transparent.png">
         </div>
-        <div class="card">
-            <h2>Valor em produtos vendidos</h2>
-            <p id="card_valor_prod_vendidos"> </p>
+        <a class="item1" href="../cadastroProdutos-estoque/cadastroProdutos.html">Cadastrar Novos Produtos</a>
+        <a class="item2" href="../entradaProdutos-estoque/entrada-produtos.html">Registrar Compra de Produtos</a>
+        <a class="item3" href="../saidaProdutos-estoque/saida-produtos.html">Registrar Venda de Produtos</a>
+    </nav>
+
+    <main>
+        <div style="width: 1000px; height: 250px;">
+            <canvas id="myChart"></canvas>
         </div>
-    </div>
 
-<div style="width: 1500px; height: 250px;">
-<canvas id="myChart"></canvas>
-</div>
+        <div style="width: 1000px; height: 250px;">
+            <canvas id="radar"></canvas>
+        </div>
 
-<div style="width: 1500px; height: 250px;">
-<canvas id="radar"></canvas>
-</div>
+        <div style="width: 1000px; height: 250px;">
+            <canvas id="horizontalBar"></canvas>
+        </div>
 
-<div style="width: 1500px; height: 250px;">
-<canvas id="horizontalBar"></canvas>
-</div>
+        <div style="width: 1000px; height: 250px;">
+            <canvas id="doughnut"></canvas>
+        </div>
+    </main>
 
-<div style="width: 1500px; height: 250px;">
-<canvas id="doughnut"></canvas>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://github.com/chartjs/Chart.js/blob/master/docs/scripts/utils.js"></script>
-<script src="dashboard-estoque.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://github.com/chartjs/Chart.js/blob/master/docs/scripts/utils.js"></script>
+    <script src="dashboard-estoque.js"></script>
 
 </body>
 
 </html>
-
